--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,13 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.7",
+    "@vitejs/plugin-react-swc": "^4.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
     "jsdom": "^25.0.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
+    "vite": "^5.4.20",
     "vitest": "^3.2.4"
   }
 }
