--- a/backend/package.json
+++ b/backend/package.json
@@ -18,17 +18,17 @@
   "dependencies": {
     "@nestjs/common": "^10.4.7",
     "@nestjs/core": "^10.4.7",
-    "@nestjs/platform-express": "^10.4.7",
-    "@prisma/client": "^5.18.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/swagger": "^7.4.2",
+    "@prisma/client": "^5.18.0",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "@nestjs/swagger": "^7.4.2",
-    "swagger-ui-express": "^5.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
@@ -36,16 +36,19 @@
     "@nestjs/testing": "^10.4.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.14.11",
+    "@types/passport-jwt": "^3.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prisma": "^5.18.0",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/passport-jwt": "^3.0.6",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
