--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,8 @@ name: CI
 
 on:
   pull_request:
-    branches: [ main ]
   push:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-and-test:
@@ -13,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.18.0'
+          node-version: '22.20.0'
           cache: 'npm'
       - name: Install root deps
         run: npm i --ignore-scripts
