--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,11 @@ out/
 coverage/
 
 # logs
-logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+log.txt
 
 # editor
 .DS_Store
@@ -26,3 +26,6 @@ yarn-error.log*
 
 # docker
 .docker/
+
+# n8n
+n8n-exports/*
