--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,79 +1,75 @@
 services:
-  postgres:
-    image: postgres:16
-    container_name: syncnapse-postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-change_me}
-      POSTGRES_DB: ${POSTGRES_DB:-syncnapse}
+  redis:
+    image: redis:7-alpine
+    container_name: syncnapse-redis
     ports:
-      - "5432:5432"
+      - "${REDIS_PORT_PUBLIC}:6379"
     volumes:
-      - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+      - redis_data:/data
+    # Redis is used by n8n queue mode (Bull)
+
   n8n:
     image: n8nio/n8n:latest
     container_name: syncnapse-n8n
     environment:
-      - N8N_HOST=localhost
-      - N8N_PORT=5678
-      - N8N_PROTOCOL=http
-      - GENERIC_TIMEZONE=Asia/Seoul
-      - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
-      # Development convenience: disable secure cookie and user management
-      - N8N_SECURE_COOKIE=false
-      - N8N_USER_MANAGEMENT_DISABLED=true
-      # DB(권장: Postgres 사용)
-      - DB_TYPE=postgresdb
-      - DB_POSTGRESDB_HOST=postgres
-      - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=syncnapse
-      - DB_POSTGRESDB_USER=postgres
-      - DB_POSTGRESDB_PASSWORD=change_me
+      - N8N_HOST=${N8N_HOST}
+      - N8N_PORT=${N8N_PORT}
+      - N8N_PROTOCOL=${N8N_PROTOCOL}
+      - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
+      - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=${N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS}
+      - N8N_SECURE_COOKIE=${N8N_SECURE_COOKIE}
+      - N8N_USER_MANAGEMENT_DISABLED=${N8N_USER_MANAGEMENT_DISABLED}
+      - N8N_BASIC_AUTH_ACTIVE=${N8N_BASIC_AUTH_ACTIVE}
+      - N8N_BLOCK_ENV_ACCESS_IN_NODE=${N8N_BLOCK_ENV_ACCESS_IN_NODE}
+      - N8N_GIT_NODE_DISABLE_BARE_REPOS=${N8N_GIT_NODE_DISABLE_BARE_REPOS}
+      - DB_SQLITE_POOL_SIZE=${DB_SQLITE_POOL_SIZE}
+      # Queue mode (Redis)
+      - EXECUTIONS_MODE=${EXECUTIONS_MODE}
+      - QUEUE_BULL_REDIS_HOST=${QUEUE_BULL_REDIS_HOST}
+      - QUEUE_BULL_REDIS_PORT=${QUEUE_BULL_REDIS_PORT}
+      - N8N_RUNNERS_ENABLED=${N8N_RUNNERS_ENABLED}
+      - OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS=${OFFLOAD_MANUAL_EXECUTIONS_TO_WORKERS}
+      - QUEUE_HEALTH_CHECK_ACTIVE=${QUEUE_HEALTH_CHECK_ACTIVE}
       # Encryption key for credentials at rest
       - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
     depends_on:
-      - postgres
+      - redis
     volumes:
       - n8n_data:/home/node/.n8n
+      - ${N8N_EXPORTS_DIR}:/exports
     ports:
-      - "5678:5678"
+      - "${N8N_PORT_PUBLIC}:5678"
 
-
-  # Frontend and backend services will be added in a later step
-  # to wire bind mounts and Dockerfiles for dev and prod.
   frontend:
     build:
       context: ./frontend
+      args:
+        NODE_VERSION: ${NODE_VERSION}
     image: syncnapse/frontend:local
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=${FRONTEND_NODE_ENV}
     ports:
-      - "3000:3000"
+      - "${FRONTEND_PORT_PUBLIC}:3000"
     depends_on:
       - backend
 
   backend:
     build:
       context: ./backend
+      args:
+        NODE_VERSION: ${NODE_VERSION}
     image: syncnapse/backend:local
     environment:
-      - NODE_ENV=production
-      - PORT=4000
+      - NODE_ENV=${BACKEND_NODE_ENV}
+      - PORT=${BACKEND_PORT}
       - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
     ports:
-      - "4000:4000"
-    depends_on:
-      postgres:
-        condition: service_healthy
+      - "${BACKEND_PORT_PUBLIC}:4000"
 
 volumes:
-  pgdata:
   n8n_data:
+  redis_data:
 
 networks:
   default:
