--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "firebase": "^12.4.0",
     "next": "^14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1",
