Chore: Fix DB Schema
- DB 공간 스키마 수정
- Prisma -> DB로 자동 sql 파일 생성 로직 추가

(cherry picked from commit 1de40c8d3710492980443058fbbf50f232450998)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "db:up": "cd db && docker compose up -d",
     "db:down": "cd db && docker compose down",
     "db:logs": "docker logs -f syncnapse-postgres",
-    "dev:all": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build",
+    "db:export:schema": "node scripts/export-db-schema.mjs",
+    "dev:all": "node scripts/sync-envs.mjs && npm -w backend run prisma:generate && node scripts/export-db-schema.mjs && docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build",
     "dev:all:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml down",
     "dev:all:logs": "docker compose -f docker-compose.yml -f docker-compose.dev.yml logs -f",
     "n8n:export:workflows": "docker compose -f docker-compose.yml -f docker-compose.dev.yml exec n8n bash -lc 'mkdir -p /exports && n8n export:workflow --all --separate --output=/exports'",
