Feat: Add Google OAuth
- Google OAuth 연결
- 테스트 코드 추가

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,9 @@ POSTGRES_PASSWORD=change_me
 POSTGRES_DB=syncnapse
 
 # Backend auth
+GOOGLE_CLIENT_ID=change_me_dev
+GOOGLE_CLIENT_SECRET=change_me_dev
+GOOGLE_CALLBACK_URL=change_me_dev
 JWT_SECRET=change_me_dev
 
 # n8n (Queue via Redis only)
