--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "firebase": "^12.4.0",
     "next": "^14.2.33",
+    "pdfjs-dist": "^3.11.174",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^3.3.1",
