--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,55 @@
-# dependencies
+# Dependencies
 node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-# env
+# Environment
 .env
-.env.*
-!*.env.example
+!.env.example
+.test-token
 
-# build outputs
-.next/
-dist/
-out/
-coverage/
+# Build outputs
+backend/dist/
+backend/build/
+frontend/.next/
+frontend/out/
+frontend/build/
 
-# logs
+# Database
+*.db
+*.sqlite
+
+# Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-log.txt
 
-# editor
-.DS_Store
-.idea/
+# Runtime files
+backend/var/*
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# docker
-.docker/
+# OS
+.DS_Store
+Thumbs.db
 
-# n8n
-n8n-exports/*
+# Keep sample/test files in storage
+backend/var/storage/**/*
+!backend/var/storage/.gitkeep
+!backend/var/storage/**/.gitkeep
+!backend/var/storage/**/README.md
+!backend/var/storage/**/SETUP.md
+!backend/var/storage/**/sample-*
+!backend/var/storage/**/test-*
+
+# Temporary files
+tmp/
+temp/
+*.tmp
