--- a/package.json
+++ b/package.json
@@ -30,15 +30,18 @@
     "db:down": "cd db && docker compose down",
     "db:logs": "docker logs -f syncnapse-postgres",
     "db:export:schema": "node scripts/export-db-schema.mjs",
-    "dev:all": "node scripts/sync-envs.mjs && npm -w backend run prisma:generate && node scripts/export-db-schema.mjs && docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build",
-    "dev:all:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml down",
-    "dev:all:logs": "docker compose -f docker-compose.yml -f docker-compose.dev.yml logs -f",
+    "seed:minio": "node scripts/seed-minio.mjs",
+    "setup": "npm install && node scripts/sync-envs.mjs && npm -w backend run prisma:generate && node scripts/export-db-schema.mjs",
+    "dev:all": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.minio.yml up -d --build",
+    "dev:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.minio.yml down",
+    "dev:logs": "docker compose -f docker-compose.yml -f docker-compose.dev.yml -f docker-compose.minio.yml logs -f",
     "n8n:export:workflows": "docker compose -f docker-compose.yml -f docker-compose.dev.yml exec n8n bash -lc 'mkdir -p /exports && n8n export:workflow --all --separate --output=/exports'",
     "n8n:export:credentials": "docker compose -f docker-compose.yml -f docker-compose.dev.yml exec n8n bash -lc 'mkdir -p /exports && n8n export:credentials --all --output=/exports'",
     "n8n:import:workflows": "docker compose -f docker-compose.yml -f docker-compose.dev.yml exec n8n bash -lc 'n8n import:workflow --input=/exports'",
     "n8n:import:credentials": "docker compose -f docker-compose.yml -f docker-compose.dev.yml exec n8n bash -lc 'n8n import:credentials --input=/exports'"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.705.0",
     "concurrently": "^9.0.0"
   }
 }
