Fix: Fix CI logic
- CI에서 .env를 가져오지 못하는 문제를 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
           npm -w backend i --ignore-scripts
       - name: Generate Prisma Client
         run: npm -w backend run prisma:generate
+      - name: Setup environment files
+        run: |
+          cp .env.example .env
+          node scripts/sync-envs.mjs
       - name: Test
         run: |
           npm -w frontend run test:ci
