--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -32,10 +33,12 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.7",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
+    "fake-indexeddb": "^6.2.4",
     "jsdom": "^25.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.3",
